--- a/lakes/templates/lakes/base.html
+++ b/lakes/templates/lakes/base.html
@@ -3,7 +3,7 @@
   <head>
     <title>Daniel Merz</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css"/>
-    <link rel="stylesheet" href="/main.css"/>
+    <link rel="stylesheet" href="/static/lakes/main.css"/>
   </head>
 </html>
 <body>
