Add divesport logo

--- a/lakes/templates/lakes/base.html
+++ b/lakes/templates/lakes/base.html
@@ -4,18 +4,21 @@
     <title>Daniel Merz</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css"/>
     <link rel="stylesheet" href="/static/lakes/main.css"/>
+    <!-- for later :) <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>-->
   </head>
 </html>
 <body>
   <header>
     <h1>Taucherkarten</h1>
   </header>
+  <!--
   <nav>
-    <!-- a(href='coding.html') Coding--><a href="/tauchen.html">Tauchen</a><a href="/feuer-show.html">Feuershow</a>
+    <a href="/tauchen.html">Tauchen</a>
   </nav>
+-->
   <article>
     <div id="article-nav">
-      <bold>Bayrische Seen</bold>
+      <bold>Seen in Oberbayern</bold>
       <ul>
         <li><a href="/tauchen/echinger-weiher.html">Echinger Weiher</a></li>
         <li><a href="/tauchen/langenwieder-see.html">Langenwieder See</a></li>
