--- a/lakes/templates/lakes/index.html
+++ b/lakes/templates/lakes/index.html
@@ -22,6 +22,6 @@ Servus!
 <p>
     Mein Tauchclub:
 </p>
-    <img src="/pics/divesport-logo.jpg" style="width: 148px; height: 148px;"/>
+    <img src="/static/lakes/pics/divesport-logo.jpg" style="width: 148px; height: 148px;"/>
     <a href="http://www.divesport.de/">Divesport.de</a>
 {% endblock %}
