Make title a link

--- a/lakes/templates/lakes/base.html
+++ b/lakes/templates/lakes/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daniel Merz</title>
+    <title>Taucherkarten</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css"/>
     <link rel="stylesheet" href="/static/lakes/main.css"/>
     <!-- for later :) <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>-->
@@ -9,7 +9,7 @@
 </html>
 <body>
   <header>
-    <h1>Taucherkarten</h1>
+    <h1><a id="title" href="/">Taucherkarten</a></h1>
   </header>
   <!--
   <nav>
