--- a/lakes/static/lakes/main.css
+++ b/lakes/static/lakes/main.css
@@ -35,6 +35,12 @@ a {
 h1, h2, h3, h4 {
  color: #EFEFEF; /* 5 */
 }
+#title {
+ text-decoration: none;
+ color: #EFEFEF; /* 5 */
+}
+h1 a:link {
+}
 
 #article-title {
  grid-column: 2;
