--- a/lakes/static/lakes/main.css
+++ b/lakes/static/lakes/main.css
@@ -2,30 +2,29 @@
 color palette https://coolors.co/143109-aaae7f-d0d6b3-f7f7f7-efefef
 */
 html {
-    height: 100%;
+ width: 100%;
+ height: 100%;
 }
 body {
  background-color: black;
  color: #F7F7F7;
 
- width: 100vt;
+ width: 100%;
  height: 100%;
+
+ text-align: center;
  display: flex;
  flex-direction: column;
- align-content: center;
- text-align: center;
- margin-left: 3em;
 }
 article {
  margin-top: 1em;
  display: grid;
  grid-template-columns: 30% auto 30%;
- grid-template-rows: 4em 100%;
+ grid-template-rows: 4em auto;
 }
 footer {
- justify-self: flex-end;
  margin-top: auto;
- margin-bottom: 0.5em;
+ padding: 0.5em;
 }
 
 a {
@@ -38,8 +37,6 @@ h1, h2, h3, h4 {
 #title {
  text-decoration: none;
  color: #EFEFEF; /* 5 */
-}
-h1 a:link {
 }
 
 #article-title {
@@ -54,7 +51,8 @@ h1 a:link {
  align-items: center;
 }
 #article-nav {
- margin-top: 1em;
+ padding-top: 1em;
+ margin-left: 3em;
  grid-column: 1;
  grid-row: 1 / 2;
  border-color: #D0D6B3;
