--- a/lakes/static/lakes/main.css
+++ b/lakes/static/lakes/main.css
@@ -39,6 +39,14 @@ h1, h2, h3, h4 {
  color: #EFEFEF; /* 5 */
 }
 
+/* not used */
+nav > a {
+ background-color: #143109; /* 1 */
+ padding: 0.5em;
+ border-radius: 0.5em;
+ margin-inline-start: 0.5em;
+ margin-inline-end: 0.5em;
+}
 #article-title {
  grid-column: 2;
  grid-row: 1;
@@ -58,11 +66,6 @@ h1, h2, h3, h4 {
  border-color: #D0D6B3;
  text-align: left;
 }
-
-nav > a {
- background-color: #143109; /* 1 */
- padding: 0.5em;
- border-radius: 0.5em;
- margin-inline-start: 0.5em;
- margin-inline-end: 0.5em;
+#divespot__map {
+ padding: 1em;
 }
