--- a/lakes/templates/lakes/base.html
+++ b/lakes/templates/lakes/base.html
@@ -38,5 +38,5 @@
       {% endblock %}
     </div>
   </article>
-  <footer><a href="/impressum.html">Impressum</a></footer>
+  <footer><a href="/impressum">Impressum</a></footer>
 </body>
