Add data-protection info

--- a/lakes/templates/lakes/base.html
+++ b/lakes/templates/lakes/base.html
@@ -38,5 +38,8 @@
       {% endblock %}
     </div>
   </article>
-  <footer><a href="/impressum">Impressum</a></footer>
+  <footer>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutz</a>
+  </footer>
 </body>
