--- a/lakes/templates/lakes/data-protection.html
+++ b/lakes/templates/lakes/data-protection.html
@@ -93,7 +93,7 @@ Nutzer dieser Webseite können von ihrem Widerspruchsrecht Gebrauch machen und d
 </p>
 <p>
 Wenn Sie eine Berichtigung, Sperrung, Löschung oder Auskunft über die zu Ihrer Person gespeicherten personenbezogenen Daten wünschen oder Fragen bzgl. der Erhebung, Verarbeitung oder Verwendung Ihrer personenbezogenen Daten haben oder erteilte Einwilligungen widerrufen möchten, wenden Sie sich bitte an folgende E-Mail-Adresse:
-nomerzi@yahoo.de
+nomerzi(at)yahoo.de
 </p>
 
 {% endblock %}
