--- a/lakes/templates/lakes/base.html
+++ b/lakes/templates/lakes/base.html
@@ -39,6 +39,7 @@
     </div>
   </article>
   <footer>
+    <a href="/nerd-area">Nerd Area</a>
     <a href="/impressum">Impressum</a>
     <a href="/datenschutz">Datenschutz</a>
   </footer>
