Add link to impressum in data-protection

--- a/lakes/templates/lakes/data-protection.html
+++ b/lakes/templates/lakes/data-protection.html
@@ -7,7 +7,7 @@ Datenschutz
 {% block content %}
 <h3>Grundlegendes</h3>
 <p>
-Diese Datenschutzerklärung soll die Nutzer dieser Website über die Art, den Umfang und den Zweck der Erhebung und Verwendung personenbezogener Daten durch den Websitebetreiber [Ihre Kontaktdaten einfügen] informieren.
+Diese Datenschutzerklärung soll die Nutzer dieser Website über die Art, den Umfang und den Zweck der Erhebung und Verwendung personenbezogener Daten durch den Websitebetreiber (siehe <a href="taucherkarten.de/impressum">Impressum</a>) informieren.
 </p>
 <p>
 Der Websitebetreiber nimmt Ihren Datenschutz sehr ernst und behandelt Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Vorschriften.
