Add link to murauer

--- a/lakes/templates/lakes/nerd-area.html
+++ b/lakes/templates/lakes/nerd-area.html
@@ -19,4 +19,11 @@ entwickelt und bietet eine <a href="https://graphql.org/">GraphQL</a> API an:
     (Größere) PRs sollten mit mir abgesprochen werden.
 </p> 
 
+<p>
+    Gehosted in Deutschland:
+</p>
+    <a href="https://my.murauer-it.at/aff.php?aff=74&page=allgemein" target="_blank">
+<img src="https://my.murauer-it.at/assets/wungerb/120x60_hosted_by.png">
+</a> 
+
 {% endblock %}
