--- a/lakes/templates/lakes/index.html
+++ b/lakes/templates/lakes/index.html
@@ -15,8 +15,16 @@ Servus!
 </p>
 
 <p>
-    Hier ist der Ort um selbsterstellte Unterwasserkarten hochzuladen um sie anderen
+    Hier ist in Ort um selbsterstellte Unterwasserkarten hochzuladen um sie anderen
     Taucher zur Verfügung zu stellen.
+    Zusätzlich findet ihr hier Links zu den offiziellen Webseiten der Tauchseen.
+</p>
+
+<p>
+    Momentan habe ich noch keine Useraccounts implementiert. Um Infos
+    und Karten zu aktualisieren/hochzuladen schickt sie mir für den Moment
+    bitte persönlich (Whatsapp).
+    Das gleiche gilt für Anfragen von zusätzlichen Features.
 </p>
 
 <p>
